# ChonkyStation3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  qt.yml  windows.yml
ChonkyStation3/: CMakeLists.txt  ChonkyStation3.cpp  CrashAnalyzer.hpp  PlayStation3.cpp  PlayStation3.hpp  Settings.cpp  Settings.hpp
ChonkyStation3/Common/: BEField.hpp  Capstone.hpp  CellTypes.hpp  ElfSymbolParser.hpp  MemoryConstants.hpp  common.hpp
ChonkyStation3/Filesystem/: Filesystem.cpp  Filesystem.hpp
ChonkyStation3/Frontend/: DisabledWidgetOverlay.hpp  GameWindow.cpp  GameWindow.hpp  MainWindow.cpp  MainWindow.hpp  MemoryWatchpointDialog.cpp  MemoryWatchpointDialog.hpp  PPUDebuggerWidget.cpp  PPUDebuggerWidget.hpp  SettingsWidget.cpp  SettingsWidget.hpp  ThreadDebuggerWidget.cpp  ThreadDebuggerWidget.hpp
ChonkyStation3/Loaders/: StubPatcher.cpp  StubPatcher.hpp
ChonkyStation3/Memory/: Memory.cpp  Memory.hpp
ChonkyStation3/OS/: HandleManager.hpp  Import.hpp  Lv2Base.cpp  Lv2Base.hpp  Lv2Object.hpp  Lv2ObjectManager.hpp  Module.hpp  ModuleManager.cpp  ModuleManager.hpp  PRXManager.cpp  PRXManager.hpp  SPUThread.cpp  SPUThread.hpp  SPUThreadManager.cpp  SPUThreadManager.hpp  Syscall.cpp  Syscall.hpp  Thread.cpp  Thread.hpp  ThreadManager.cpp  ThreadManager.hpp
ChonkyStation3/PPU/: PPU.cpp  PPU.hpp  PPUDisassembler.cpp  PPUDisassembler.hpp  PPUTypes.hpp
ChonkyStation3/RSX/: FragmentInstruction.hpp  FragmentShader.hpp  FragmentShaderDecompiler.cpp  FragmentShaderDecompiler.hpp  RSX.cpp  RSX.hpp  RSXCache.hpp  (+6 more)
Resources/: icon.rc
(+137 files in other folders)
